2005-02-16	Florian Boor  	<florian.boor@kernelconcepts.de>

	* keyctl.c: Add some lines of code to read commands from file.

2005-02-07	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Makefile: Fixed typo, updated .desktop generation and MEMBERS.
	* keys/keys.*: New files providing keys and button config tool.
	* main.c: Add i8n support for applet table.
	
	* keys/keyboard.*: New files for new keyboard support.
	* packages.*, gpe-conf-keyboard.desktop.in, pixmaps/gpe-config-keyboard.png,
	  keyboard.*, keyboards.def: Removed obsolete files.
	* main.c: Changed #includes to match new directory structure.
	* kbd.*, keyctl.*: Moved to new "keys" subdir.
	* Makefile: Fixed clean target, updated to build new directory.
	* misc.c, kbd.c, kbd.h, main.c, suid.c: Removed old cruft.
	* HACKING: Some minor updates.

2005-02-05	Florian Boor  	<florian.boor@kernelconcepts.de>

	* cfgfile.c (is_present_interface): Don't hide bnep* interfaces.

2005-02-03	Florian Boor  	<florian.boor@kernelconcepts.de>

	* theme.c: Changed some defaults.
	* sysinfo.c: Fixed broken display of long adresses.

2005-01-19	Florian Boor  	<florian.boor@kernelconcepts.de>

	* theme.c: Some cleanups, added setting for terminal font size.
	* applets.*: Removed some old cruft.
	* suid.*, applets.*: Moved change_cfg_value() to applets.c.
	* tasks.c: include applets.h instead of suid.h.

2005-01-02	Florian Boor  	<florian.boor@kernelconcepts.de>

	* sysinfo.c: Corrected comment.
	
2005-01-01  Luc Pionchon  <luc@handhelds.org>

	* network.c (show_wificonfig): remove markup from i18n'ed strings.
	* tools/interface.c (if_to_infostr): Likewise.

2004-11-28	Florian Boor  	<florian.boor@kernelconcepts.de>

	* cfgfile.*, network.c: Fixed device position handling which contained 
	                        several bugs.

2004-11-23	Florian Boor  	<florian.boor@kernelconcepts.de>

	* cfgfile.*, network.c: Hide all network interfaces that are not available.

2004-11-19	Florian Boor  	<florian.boor@kernelconcepts.de>
