@@ -1,3 +1,10 @@
+2005-02-17	Florian Boor  	<florian.boor@kernelconcepts.de>
+
+	* HACKING: Minor updates.
+	* keyctl.c: Finished command file parser.
+	* data/key-commands: New file with basic set of commands.
+	* battery.c: Applied patches by Rob Taylor to improve battery display. 
+
 2005-02-16	Florian Boor  	<florian.boor@kernelconcepts.de>
 
 	* keyctl.c: Add some lines of code to read commands from file.
